[nav] fixed display of help and user menus on mobile

--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -53,17 +53,25 @@ nav {
     padding-right: 0;
   }
   a.help {
-    margin: 0;
-    margin-top: 10px;
-    margin-left: 12px;
-    padding: 0;
-    color: #b3b3b3;
+    @media (min-width: $screen-sm-min) {
+      margin: 10px 0 0 12px;
+      padding: 0;
+      color: #b3b3b3;
+    }
+    @media (max-width: $screen-xs-max) {
+      margin: 0;
+      color: $navbar-default-color;
+    }
   }
 }
 
 img.gravatar {
   height: 40px;
   width: 40px;
+  @media (max-width: $screen-xs-max) {
+    height: 20px;
+    width: 20px;
+  }
   margin-left: 10px;
   border-radius: 3px 3px 3px 3px;
   box-shadow: 0 1px 0 #FFFFFF;
